# advent-2023

./: .pre-commit-config.yaml  README.md  pyproject.toml
advent/: __init__.py  __main__.py  __version__.py  application.py  base.py
advent/days/: __init__.py  day1.py  day2.py
advent/utils/: __init__.py
tests/: test_day1.py  test_day2.py
